[package]
name = "prometheus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
futures = "0.3.30"
hyper = { version = "1.1.0", features = ["full"] }
hyper-util = { version = "0.1.3", features = ["client-legacy"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
tokio = { version = "1.36.0", features = ["full"] }
tower = "0.4.13"
